@@ -1,5 +1,6 @@
 language: c
-script: bash -ex .travis-ci.sh
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
+script: bash -ex .travis-opam.sh
 env:
-  - OCAML_VERSION=4.02.1 OPAM_VERSION=1.2.0
-  - OCAML_VERSION=4.01.0 OPAM_VERSION=1.2.0
+  - PACKAGE="tuntap" OCAML_VERSION=4.01
+  - PACKAGE="tuntap" OCAML_VERSION=latest
