@@ -2,6 +2,7 @@
 * Do not leak a file descriptor per tun interface (#12 via Justin Cormack)
 * Avoid the need for root access for persistent interfaces by not calling
   `SIOCSIFFLAGS` if not needed (#13 via Justin Cormack).
+* Use centralised Travis scripts.
 
 1.2.0 (09-Jan-2015):
 * [set_ipaddr] renamed to [set_ipv4] since it can only set IPv4 addresses.
